fix slider css on small-phones

--- a/src/assets/styles/blocks/btn.scss
+++ b/src/assets/styles/blocks/btn.scss
@@ -67,8 +67,7 @@
     }
 
     @include phones {
-        margin-bottom: 3
-        0px;
+        margin-bottom: 10px;
     }
 
     &::before {
