--- a/src/assets/styles/blocks/contact-me.scss
+++ b/src/assets/styles/blocks/contact-me.scss
@@ -33,8 +33,14 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-
   padding: 20px;
+  
+  &__title {
+
+    @include phones {
+      width: 100%;
+    }
+  }
 }
 
 .form-btn-wrap {
