--- a/src/assets/styles/blocks/slider.scss
+++ b/src/assets/styles/blocks/slider.scss
@@ -47,6 +47,7 @@
         width: 100%;
         padding-top: 10px;
         padding-bottom: 10px;
+        margin-bottom: 20px;
     }
 }
 
@@ -55,18 +56,19 @@
     justify-content: center;
     @include phones {
         width: 100%;
-        margin-top: 20px;
+        margin-top: 10px;
     }
 }
 
 .transition-block {
+    display: block;
     padding: 0 10px;
 }
 
 .block-subtitle {
-    width: 90%;
+    width: 100%;
     @include phones {
-        width: 70%;
+        width: 90%;
     }
 }
 
@@ -74,10 +76,8 @@
     grid-area: info;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
 }
 
 
